Fixing phone overflowing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -29,10 +29,13 @@ a:hover {
 }
 
 body {
-    width: 100vw !important;
+    max-width: 100vw !important;
     overflow-x: hidden !important;
 }
-
+body>*{
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
+}
 
 /*social buttons*/
 
